--- a/index.html
+++ b/index.html
@@ -530,6 +530,15 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <form class="footer-form" name="email_footer_form" autocomplete="off">
+            <label
+              >Subscribe
+              <input type="email" name="email_form" placeholder="E-mail" />
+            </label>
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
