--- a/portfolio.html
+++ b/portfolio.html
@@ -343,6 +343,29 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form
+            class="footer-email-form"
+            name="email_footer_form"
+            autocomplete="off"
+          >
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email_form"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-button" type="submit">
+              Subscribe
+              <svg class="svg-footer svg-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
