--- a/index.html
+++ b/index.html
@@ -531,12 +531,26 @@
           </ul>
         </div>
         <div class="footer-form">
-          <form class="footer-form" name="email_footer_form" autocomplete="off">
-            <label
-              >Subscribe
-              <input type="email" name="email_form" placeholder="E-mail" />
+          <p class="footer-form-text">Subscribe</p>
+          <form
+            class="footer-email-form"
+            name="email_footer_form"
+            autocomplete="off"
+          >
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email_form"
+                placeholder="E-mail"
+              />
             </label>
-            <button type="submit">Subscribe</button>
+            <button class="footer-button" type="submit">
+              Subscribe
+              <svg class="svg-footer svg-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -548,6 +562,77 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <div class="modal-window">
+          <p class="modal-text">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="modal-form">
+            <div class="name">
+              <label class="label-form" for="user-name">Name</label>
+            </div>
+            <div class="thumb-form">
+              <input
+                class="input-form"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-pers-modal"></use>
+              </svg>
+            </div>
+            <div class="phone">
+              <label class="label-form" for="user-phone">Phone</label>
+            </div>
+            <div class="thumb-form">
+              <input
+                class="input-form"
+                type="text"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-modal"></use>
+              </svg>
+            </div>
+            <div class="email">
+              <label class="label-form" for="user-email">Email</label></div>
+              <div class="thumb-form">
+                <input class="input-form"
+                type="email"
+                id="user-email"
+                name="user-email">
+                <svg class="svg-modal" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email-modal"></use>
+                </svg>
+              </div>
+              <div class="comment">
+                <label class="label-form" for="user-comment">Comment</label>
+                <textarea class="textarea-form"
+                id="user-comment"
+                name="user-comment"
+                placeholder="Text input"></textarea>
+              </div>
+              <div class="checkbox">
+                <input class="visually-hidden checkbox-form" 
+                 id="user-privacy"
+                 type="checkbox"
+                 value="true"
+                 name="user-privacy">
+                 <label class="checkbox-label" for="user-privacy">
+                   <span class="span-checkbox">
+                    <svg class="svg-checkbox" width="10" height="8">
+                      <use href="./images/icons.svg#icon-checkbox"></use>
+                    </svg>
+                  </span>
+                  I accept the terms and conditions of the
+                  <a class="link-modal" target="_blank" href="privacy.policy.com">Privacy Policy</a>
+                </label>
+              </div>
+              <button class="modal-form-btn" type="submit">Send</button> 
+            </div>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
