--- a/portfolio.html
+++ b/portfolio.html
@@ -347,14 +347,14 @@
           <p class="footer-form-text">Subscribe</p>
           <form
             class="footer-email-form"
-            name="email_footer_form"
+            name="email-footer-form"
             autocomplete="off"
           >
             <label class="footer-label">
               <input
                 class="footer-input"
                 type="email"
-                name="email_form"
+                name="email-form"
                 placeholder="E-mail"
               />
             </label>
