--- a/index.html
+++ b/index.html
@@ -562,85 +562,81 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
-        <div class="modal-window">
-          <p class="modal-text">
-            Leave your contacts and we will call you back
-          </p>
-          <form class="modal-form">
-            <div class="name">
-              <label class="label-form" for="user-name">Name</label>
-            </div>
-            <div class="thumb-form">
-              <input
-                class="input-form"
-                type="text"
-                id="user-name"
-                name="user-name"
-              />
-              <svg class="svg-modal" width="18" height="24">
-                <use href="./images/icons.svg#icon-pers-modal"></use>
-              </svg>
-            </div>
-            <div class="phone">
-              <label class="label-form" for="user-phone">Phone</label>
-            </div>
-            <div class="thumb-form">
-              <input
-                class="input-form"
-                type="text"
-                id="user-phone"
-                name="user-phone"
-              />
-              <svg class="svg-modal" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-modal"></use>
-              </svg>
-            </div>
-            <div class="email">
-              <label class="label-form" for="user-email">Email</label>
-            </div>
-            <div class="thumb-form">
-              <input
-                class="input-form"
-                type="email"
-                id="user-email"
-                name="user-email"
-              />
-              <svg class="svg-modal" width="18" height="24">
-                <use href="./images/icons.svg#icon-email-modal"></use>
-              </svg>
-            </div>
-            <div class="comment">
-              <label class="label-form" for="user-comment">Comment</label>
-              <textarea
-                class="textarea-form"
-                id="user-comment"
-                name="user-comment"
-                placeholder="Text input"
-              ></textarea>
-            </div>
-            <div class="checkbox">
-              <input
-                class="visually-hidden checkbox-form"
-                id="user-privacy"
-                type="checkbox"
-                value="true"
-                name="user-privacy"
-              />
-              <label class="checkbox-label" for="user-privacy">
-                <span class="span-checkbox">
-                  <svg class="svg-checkbox" width="10" height="8">
-                    <use href="./images/icons.svg#icon-checkbox"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="link-modal" target="_blank" href="privacy.policy.com"
-                  >Privacy Policy</a
-                >
-              </label>
-            </div>
-            <button class="modal-form-btn" type="submit">Send</button>
-          </form>
-        </div>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="name">
+            <label class="label-form" for="user-name">Name</label>
+          </div>
+          <div class="thumb-form">
+            <input
+              class="input-form"
+              type="text"
+              id="user-name"
+              name="user-name"
+            />
+            <svg class="svg-modal" width="18" height="24">
+              <use href="./images/icons.svg#icon-pers-modal"></use>
+            </svg>
+          </div>
+          <div class="phone">
+            <label class="label-form" for="user-phone">Phone</label>
+          </div>
+          <div class="thumb-form">
+            <input
+              class="input-form"
+              type="text"
+              id="user-phone"
+              name="user-phone"
+            />
+            <svg class="svg-modal" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone-modal"></use>
+            </svg>
+          </div>
+          <div class="email">
+            <label class="label-form" for="user-email">Email</label>
+          </div>
+          <div class="thumb-form">
+            <input
+              class="input-form"
+              type="email"
+              id="user-email"
+              name="user-email"
+            />
+            <svg class="svg-modal" width="18" height="24">
+              <use href="./images/icons.svg#icon-email-modal"></use>
+            </svg>
+          </div>
+          <div class="comment">
+            <label class="label-form" for="user-comment">Comment</label>
+            <textarea
+              class="textarea-form"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox">
+            <input
+              class="visually-hidden checkbox-form"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="checkbox-label" for="user-privacy">
+              <span class="span-checkbox">
+                <svg class="svg-checkbox" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-modal" target="_blank" href="privacy.policy.com"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
