--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="name">
+          <div class="info-area name">
             <label class="label-form" for="user-name">Name</label>
 
             <div class="thumb-form">
@@ -579,7 +579,7 @@
               </svg>
             </div>
           </div>
-          <div class="phone">
+          <div class="info-area">
             <label class="label-form" for="user-phone">Phone</label>
 
             <div class="thumb-form">
@@ -594,7 +594,7 @@
               </svg>
             </div>
           </div>
-          <div class="email">
+          <div class="info-area">
             <label class="label-form" for="user-email">Email</label>
 
             <div class="thumb-form">
