--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="info-area name">
+          <div class="info-area">
             <label class="label-form" for="user-name">Name</label>
 
             <div class="thumb-form">
