--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </section>
 
       <section class="team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list team-list">
             <li class="card team-card">
@@ -396,7 +396,146 @@
         </div>
       </section>
 
-      <section class="customers">
+      <section class="portfolio">
+        <div class="container portfolio-container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="list card-list">
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img1.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img1.jpg"
+                    width="360"
+                    alt="img1"
+                  />
+
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="cards-text">
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="card-text text">App</p>
+                </div></a
+              >
+            </li>
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img2.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img2.jpg"
+                    width="360"
+                    alt="img2"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="cards-text">
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="card-text text">Marketing</p>
+                </div></a
+              >
+            </li>
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img3.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img3.jpg"
+                    width="360"
+                    alt="img3"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="cards-text">
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="card-text text">App</p>
+                </div></a
+              >
+            </li>
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img4.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img4.jpg"
+                    width="360"
+                    alt="img4"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="cards-text">
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="card-text text">Marketing</p>
+                </div></a
+              >
+            </li>
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img5.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img5.jpg"
+                    width="360"
+                    alt="img5"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="cards-text">
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="card-text text">Design</p>
+                </div></a
+              >
+            </li>
+            <li class="cards-portfolio">
+              <a class="link cards-link" href="https://www.img6.com/">
+                <div class="cards">
+                  <img
+                    class="card-img"
+                    src="./images/images2/img6.jpg"
+                    width="360"
+                    alt="img6"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="cards-text">
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="card-text text">Marketing</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- <section class="customers">
         <div class="container customers-container">
           <h2 class="section-title customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -468,7 +607,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <div class="container footer-container">
@@ -555,7 +694,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-button" type="button" data-modal-close>
           <svg class="modal-button-icon" width="8" height="8">
